# ffmpeg-sdl2-player

./: CMakeLists.txt  README.md  demo.cpp  main.cpp  player.cpp  player.h  screen.cpp  screen.h  test.cpp  test.h  test2.cpp  test2.h
